# proxy_server

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml
.github/workflows/: build-tz.yml  build.yml
.sisyphus/run-continuation/: ses_1b2429fc2ffeNt0pBh7vjrTpjr.json
scripts/: install-tz.sh  install.sh  proxy-switch.sh
scripts/lib/: tz-common.sh
tz/: Cargo.toml
tz/src/: apply.rs  envfile.rs  gsettings.rs  main.rs  proxy.rs  speedtest.rs  theme.rs  ui.rs
