[package]
name = "tz"
version = "0.1.0"
edition = "2021"
description = "Interactive proxy switcher TUI for proxy_server"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
dirs = "6"
